[tool.poetry]
name = "finalproject-mezhuev-m25-555"
version = "1.0.0"
description = ""
authors = ["Pavel Mezhuev <mp710@ya.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "data", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_path = "data/"
log_path = "logs/"
base_currency = "USD"
rates_ttl_seconds = 300
auto_update_rates = true
show_dated_rates = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
